changing header font color

--- a/styles/app.styl
+++ b/styles/app.styl
@@ -159,7 +159,7 @@ a
       padding 0
       .gc-header-section
         font-size 15px
-        color #8b8b8b
+        color #202030
         height 66px
         padding 0 30px
         justify-content center
