--- a/styles/core/variables.styl
+++ b/styles/core/variables.styl
@@ -11,11 +11,12 @@ $baseFontColorPrimary   = #333333 // black
 $baseFontColorSecondary = #ffffff // white
 $lightGrey              = #5996C1 // SILVER LAKE BLUE
 $backgroundColor        = #f7f7f7 // pale white
-$headerActiveBG         = #173970 // MIDNIGHT BLUE
+$headerActiveBG         = #f9f9f9 // MIDNIGHT BLUE
 $ctaColor               = #202030 // DARK GUNMETAL
 $activeColor            = #173970 // MIDNIGHT BLUE
 $secondaryColor         = #316191 // B'DAZZLED BLUE
 $cookieBannerBG         = #202030 // DARK GUNMETAL
+$headerFontColor        = #202030 // DARK GUNMETAL
 //------------------------------------------------
 
 
