:heavy_plus_sign: Add calendar component

--- a/styles/app.styl
+++ b/styles/app.styl
@@ -658,3 +658,7 @@ a
       @media $mediaL
         margin-left 0
         margin-right 0
+
+.calendly-inline-widget
+  min-width $mediaXS
+  height 570px
