Adding new icons

--- a/styles/app.styl
+++ b/styles/app.styl
@@ -308,6 +308,8 @@ a
           padding 0
           img
             height 288px
+      a
+        color #202030
 
   &.customer-types
     background-color $activeColor
