--- a/styles/core/variables.styl
+++ b/styles/core/variables.styl
@@ -9,7 +9,7 @@ $fontFamilyHeaders  = 'NewsGoth BdXCn BT W00 Bold', sans-serif
 //------------------------------------------------
 $baseFontColorPrimary   = #333333 // black
 $baseFontColorSecondary = #ffffff // white
-$lightGrey              = #5996C1 // SILVER LAKE BLUE
+$lightGrey              = #202030 // SILVER LAKE BLUE
 $backgroundColor        = #f7f7f7 // pale white
 $headerActiveBG         = #f9f9f9 // MIDNIGHT BLUE
 $ctaColor               = #202030 // DARK GUNMETAL
