:recycle: :art: Rebrand

--- a/components/Services/Services.styl
+++ b/components/Services/Services.styl
@@ -4,6 +4,8 @@
     position relative
     .gc-service-img
       padding 20px 0
+      width 100%
+      height 40vh
     .gc-service-included
       vertical-align top
       position absolute
