--- a/styles/app.styl
+++ b/styles/app.styl
@@ -264,7 +264,7 @@ a
 
   &.intro
     height 100vh
-    background-image url('./static/images/intro.png')
+    background-image url('./static/images/intro.jpeg')
     background-position-x right
     @media $mediaM
       background-position-x center
@@ -381,6 +381,8 @@ a
     position relative
     .gc-service-img
       padding 20px 0
+      width 100%
+      height 30vh
     .gc-service-free
       vertical-align top
       position absolute
@@ -593,6 +595,8 @@ a
     p
       max-width 203px
       padding-top 20px
+    img
+      height 20vh
     @media $mediaL
       text-align left
       align-items left
